--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-    1. DESCRIPTION
+==== 1. DESCRIPTION ====
 
 Cap2re is a library for working with digital cameras. It can be used to capture
 images from camera, get and set camera options in a unified, backend (and
@@ -7,8 +7,7 @@ camera model) independent manner.
 It is written to be easy to use and extend, with a polite design and clean, 
 easy to understand API. 
 
-The library is written in C++, but Python wrappers will be available in the
-near future.
+The library is written in C++, but a Python wrapper is provided as well.
 
 Cap2re is licensed under the terms of GNU LGPL v3, which allows you to freely
 copy, modify and distribuite it, under few restrictions:
@@ -18,7 +17,7 @@ copy, modify and distribuite it, under few restrictions:
       do it, as long as you link dinamically.
 
 
-    2. REQUIREMENTS
+==== 2. REQUIREMENTS ====
 
 Cap2re makes use of several libraries, in order to build it you must have the
 folowing libs and tools installed:
@@ -26,13 +25,15 @@ folowing libs and tools installed:
     - C++ compiler and standard libraries, with support for C++11
     - Boost with RegEx support
     - Waf build tool
+    - SWIG for Python wrapper
 
 To build the backends, which provide the actual functionality, you have
 to check if any of these libraries are installed:
 
     - libgphoto2
     
-    3. BUILDING
+
+==== 3. BUILDING ==== 
 
 To compile the library, check if you've met all the requirements and then just
 type from top directory:
