--- a/README
+++ b/README
@@ -44,6 +44,14 @@ type from top directory:
 And then run:
 
     $ waf build
+
+On success, you'll have a build/ directory which contains libcap2re.so and
+cap2re.py. 
+To use Cap2re in your C++ project, grab the headers and libcap2re.so
+and place them in your project.
+To use Cap2re in your Python project, make a copy of libcap2re.so and call it
+_cap2re.so, place it with cap2re.py in your modules directory and it's ready to
+use.
     
 For additional build options and actions, check out:
     
